--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -124,6 +124,8 @@ jobs:
           NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')
           git tag $NEW_VERSION
           git push --tags
+          git fetch --tags
+          git status --porcelain          
           ./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
