--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -42,7 +42,7 @@ permissions:
   id-token: write
   contents: read
 concurrency:
-  group: ${{ github.action_repository}}-${{ github.head_ref || github.ref_name }}  
+  group: ${{ github.action_repository || github.repository }}-${{ github.head_ref || github.ref_name }}  
 jobs:
   build:
     if: github.actor != 'dais-machine'
