--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,7 +20,7 @@ on:
       account:
         required: false      
         type: string
-        default: "DAIS_JM"          
+        default: "DAIS"          
   workflow_dispatch:
 permissions:
   id-token: write
@@ -70,10 +70,13 @@ jobs:
           if [[ "${{ inputs.run_tests }}" ==  "true" ]]; then
             pytest test --cov-report html --cov-report xml --junitxml=results.xml --cov $projectName/
           fi
-          bumpversion patch
-          make build
-          make release
-          git push && git push --tags
+          default_branch=$(git branch --show-current)
+          if [[ "$default_branch" == "master" || "$default_branch" == "main" || "$default_branch" == "develop" || "${{ inputs.hotfix }}" ==  "true" ]]; then
+            bumpversion patch
+            make build
+            make release
+            git push && git push --tags          
+          fi          
           echo "::set-output name=gitLog::$gitLog"
       - name: Push values.yaml to DAIS S3
         id: push
