--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,7 +26,7 @@ permissions:
   id-token: write
   contents: read
 concurrency:
-  group: ${{ github.action_repository}}-${{ github.head_ref || github.ref_name }}  
+  group: ${{ github.action_repository || github.repository }}-${{ github.head_ref || github.ref_name }}    
 jobs:
   build:
     if: github.actor != 'dais-machine'
