--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -57,7 +57,7 @@ permissions:
   contents: read
   checks: write
 concurrency:
-  group: ${{ github.action_repository || github.repository }}-${{ github.head_ref || github.ref_name }}    
+  group: ${{ github.action_repository || github.repository }}-${{ github.ref_name }}    
 jobs:
   build:
     if: github.actor != 'dais-machine'
