--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -125,6 +125,9 @@ jobs:
           git status --porcelain
           CURRENT_VERSION=$(git describe --tags --abbrev=0)
           NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')
+          if [[ $CURRENT_VERSION == $NEW_VERSION]]; then
+            NEW_VERSION=$(echo $NEW_VERSION | awk -F. '{OFS="."; $NF+=1; print $0}')
+          fi
           git tag $NEW_VERSION
           git push --tags
           git fetch --tags
