--- a/.github/workflows/java-library.yml
+++ b/.github/workflows/java-library.yml
@@ -19,7 +19,7 @@ permissions:
   contents: read
   checks: write
 concurrency:
-  group: ${{ github.action_repository || github.repository }}-${{ github.ref_name }}      
+  group: ${{ github.action_repository || github.repository }}-${{ github.event.inputs.branch }}      
 jobs:
   build:
     if: github.actor != 'dais-machine'
