--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -100,7 +100,7 @@ jobs:
           CURRENT_VERSION=$(git describe --tags --abbrev=0)
           NEW_VERSION=$CURRENT_VERSION
           default_branch=$(git branch --show-current)
-          if [[ ( ${{ github.event_name }} != 'pull_request' ) && ( "$default_branch" == "master" || "$default_branch" == "main" || "$default_branch" == "develop" || "${{ inputs.hotfix }}" ==  "true" ) ]]; then
+          if [[ ( ${{ github.event_name }} != "pull_request" ) && ( "$default_branch" == "master" || "$default_branch" == "main" || "$default_branch" == "develop" || "${{ inputs.hotfix }}" ==  "true" ) ]]; then
             ./gradlew --refresh-dependencies version
             ./gradlew release -x test
             NEW_VERSION=$(git describe --tags --abbrev=0)     
